[SMOOTH-57] main menu visibility, footer socials fix

--- a/tailwind/custom/components/components.css
+++ b/tailwind/custom/components/components.css
@@ -642,13 +642,6 @@ i.theChampLogin {
 	@apply bg-white px-10 py-12 rounded-2xl;
 }
 
-.animateIn {
-	@apply translate-y-0;
-}
-.animateOut {
-	@apply -translate-y-full;
-}
-
 .sub-menu {
 	@apply !pl-5;
 }
